force-app/main/default/objects/Treatment__c/fields/Amount_to_be_paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_be_paid__c</fullName>
    <formula>IF( ISPICKVAL(Do_you_have_Insurance__c, &quot;yes&quot;),  Bill__c -( Bill__c * Discount__c ), Bill__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount to be paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>