force-app/main/default/objects/Treatment__c/fields/Do_you_have_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_Insurance__c</fullName>
    <label>Do you have Insurance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>