force-app/main/default/objects/Treatment__c/fields/Medicine__c.field-meta.xml
<CustomField>
    <fullName>Medicine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medicine</label>
    <referenceTo>Medicine__c</referenceTo>
    <relationshipLabel>Treatments</relationshipLabel>
    <relationshipName>Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>