force-app/main/default/objects/Treatment__c/validationRules/Discount_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Do_you_have_Insurance__c , &quot;NO&quot;) , NOT( ISBLANK( Discount__c ) )  )</errorConditionFormula>
    <errorMessage>Insurance is required for discount</errorMessage>
</ValidationRule>