force-app/main/default/objects/Treatment__c/listViews/Doctor_Queue_Treatment.listView-meta.xml
<ListView>
    <fullName>Doctor_Queue_Treatment</fullName>
    <filterScope>Queue</filterScope>
    <label>Doctor Queue</label>
    <queue>Doctor_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>